sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
12/13/2025:
[+] Added The Deadseat (Thanks for the suggestion Muffet<3)

12/12/2025:
[+] Added Zombotron 1-3 (Thanks for the suggestion "Timmy and Malik")

12/10/2025:
[!] If you can, join the official No Name Games Discord server! 
Invite link: https://discord.gg/EsGryf3exm (you may need to join on your 
personal device). If this doesn't get many members I might delete this.
[+] Added 1v1.lol (Added this on my own, but thanks to Tortacracker67 for 
the suggestion)
[+] Added Metroid II: Return of Samus (Thanks for the suggestion)
[+] Added Mortal Kombat: Deadly Alliance (Thanks for the suggestion colin
is a silly fella)

12/9/2025:
[+] Fixed Papa's Cupcakeria opening Papa's Cheeseria (Thanks for the bug 
report ilovenonamegamesitisveryfunandihaveagreatimeplayingitwheneverigetbor-
ediplayitinclassandimnolongerboredthatishowfunthiswebsiteit) [Calm down with
the glaze there, holy]
[+] Added Warfare 1917 (Thanks for the suggestion IluvNoNameGamesJamesA)
[Please trust me I'm not picking these guys because they're glazing]
[+] Added Madalin Stunt Cars 2 (Thanks for the suggestion TenToe"Ninja")
[+] Added Tung Tung Sahur Night Escape (son im crine)

12/8/2025:
[+] Added Undertale (Thanks for the suggestion The_throat_GOAT, Tanter, Dude
and Amara)
[+] Added Storm Ops 1, 2 and 3 (Thanks for the suggestion K)
[+] Added Factory Balls (Thanks for the suggestion Kiki)
[+] Added Papa's Sushiria (Thanks for the suggestion Kirbo9000)
[+] Added Fireboy and Watergirl: The Forest Temple (Thanks for the 
suggestion "Martello, Ay, and the Green Beans")
[+] Added Pokémon Crystal Version (Thanks for the suggestion Jessie)